<resources>
    <string name="app_name">SmartFood</string>
    <string name="system_name">Smart Food Court</string>
    <string name="prompt_username">Email</string>
    <string name="prompt_password"> Mật khẩu</string>
    <string name="prompt_repassword">Nhập lại mật khẩu</string>
    <string name="prompt_name">Họ tên</string>
    <string name="prompt_phone_number">Số điện thoại</string>
    <string name="action_register_hint">Không có tài khoản? Đăng ký</string>
    <string name="action_register">Đăng ký</string>
    <string name="action_forget_password">Quên mật khẩu?</string>
    <string name="action_sign_in_hint">Đã có tài khoản? Đăng nhập</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="register_title">ĐĂNG KÝ THÀNH VIÊN</string>
    <string name="invalid_username"> Tên đăng nhập không hợp lệ</string>
    <string name="invalid_password">Mật khẩu không hợp lệ</string>
    <string name="login_error">Đã có lỗi xảy ra! Vui lòng thử lại sau</string>
    <string name="wrong_user">Tài khoản không tồn tại</string>
    <string name="wrong_password">Mật khẩu không đúng</string>
    <string name="invalid_new_fullname">Họ tên không hợp lệ</string>
    <string name="invalid_new_email">Email không hợp lệ</string>
    <string name="invalid_new_phone_number">Số điện thoại không hợp lệ</string>
    <string name="invalid_new_password">Mật khẩu không hợp lệ</string>
    <string name="invalid_renew_password">Mật khẩu không khớp</string>

    <string name="nav_shop_title">Cửa hàng</string>
    <string name="nav_shopping_cart_title">Giỏ hàng</string>
    <string name="nav_transaction_title">Giao dịch</string>
    <string name="nav_info_title">Tài khoản</string>

    <string name="action_search">Tìm kiếm</string>
    <string name="search_error">Đã có lỗi xảy ra</string>
    <string name="search_no_products">Không tìm thấy sản phẩm</string>

    <string name="payment_service_choice_error">Không có dịch vụ thanh toán có sẵn</string>
    <string name="payment_choice_type">Chọn hình thức thanh toán</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_products_msg">Không tìm thấy sản phẩm</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">admin@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_admin_statistics"> Thống kê</string>

</resources>
